examples/test/testpolicy3471.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3471
  namespace: namespace116
spec:
  podSelector:
    matchLabels:
      key22: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value4
          key4: value11
      podSelector:
        matchLabels:
          key23: value43
          key16: value18
          key27: value49
